--- a/package.json
+++ b/package.json
@@ -2,11 +2,13 @@
   "name": "rails_simple_airbnb",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.12.1",
     "@rails/actioncable": "^6.0.0",
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "4.2.2",
     "bootstrap": "^4.4.1",
+    "materialize-css": "^1.0.0-rc.2",
     "turbolinks": "^5.2.0"
   },
   "version": "0.1.0",
